Re-organize files

--- a/Lab1/SourceCode/MOOC/Liberal Science.html
+++ b/Lab1/SourceCode/MOOC/Liberal Science.html
@@ -8,10 +8,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css" rel="stylesheet">
 </head>
-<body background="EngineeringBackground.jpeg">
+<body background="media/altBackground.jpg">
 <div class="topnav2">
     <a class="active" href="index.html">Home</a>
     <a href="">Login</a>
@@ -27,7 +27,7 @@
     <div align="center" class="swiper-wrapper">
         <div align="center" class="swiper-slide">
             <h1 align="center">Masters in Business Administration</h1>
-            <img class="center" src="MBA.jpg">
+            <img class="center" src="media/liberalscience/MBA.jpg">
             <p data-swiper-parallax="-40%">Our MBA programs provide a rigorous foundation in business fundamentals while
                 challenging students to be innovators in today’s world. Whether you’re early in your career looking to
                 develop expertise in a specialized area or an experienced professional wanting to step up your game, the
@@ -35,7 +35,7 @@
         </div>
         <div class="swiper-slide">
             <h1 align="center">JD Degree of Law</h1>
-            <img class="center" src="Law.jpg">
+            <img class="center" src="media/liberalscience/Law.jpg">
             <p data-swiper-parallax="-40%">We’re preparing well-rounded lawyers – lawyers that appreciate the
                 relationships among legal, social and political aspects of the human experience. In order to best serve
                 clients and society, lawyers must be thinkers and scholars as well as skilled technicians. Our
@@ -48,7 +48,7 @@
         </div>
         <div class="swiper-slide">
             <h1 align="center">M.D Degree of Medicine</h1>
-            <img class="center" src="Doctor.jpg">
+            <img class="center" src="media/liberalscience/Doctor.jpg">
             <p data-swiper-parallax="-40%">The UMKC School of Medicine offers an opportunity for medical education to
                 students who have obtained, or will soon earn, a baccalaureate degree. This program is the M.D. Program.
                 Students interested in the M.D. Program must apply for admission between May 1 and August 1. If selected
@@ -59,7 +59,7 @@
         </div>
         <div class="swiper-slide">
             <h1 align="center">Ph.D in Pharmacy</h1>
-            <img class="center" src="Pharmacy.jpg">
+            <img class="center" src="media/liberalscience/Pharmacy.jpg">
             <p data-swiper-parallax="-40%">The median starting salary for our graduates is about $125,000 a year and
                 pharmacy is routinely ranked among the most trusted professions. Several professional and business
                 publications rate the risk of pharmacy jobs being lost to automation as low. The aging population,
@@ -69,7 +69,7 @@
         </div>
         <div class="swiper-slide">
             <h1 align="center">Doctor of Dental Surgery</h1>
-            <img class="center" src="MechanicalEngineering.jpg">
+            <img class="center" src="media/liberalscience/Dentist.jpg">
             <p data-swiper-parallax="-40%">Our comprehensive Doctor of Dental Surgery program provides students with an
                 academic foundation, hands-on clinical experience and confidence to achieve your long-term goals. Work
                 begins in the classroom where preclinical and biomedical courses give students strong conceptual
