--- a/Lab1/SourceCode/MOOC/Music.html
+++ b/Lab1/SourceCode/MOOC/Music.html
@@ -7,11 +7,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed|Francois+One" rel="stylesheet">
     <title>Music :: Keyboard Studies</title>
 </head>
-<body background="media/piano.jpg">
+<body background="media/music/piano.jpg">
 
 <div class="container">
     <div class="row">
@@ -73,24 +73,24 @@
         <div class='row'>
             <div class="col-md-4 dcontainer">
                 <!--These images have been animated with css code in style.css sheet. The images are retrieved via Google Images.-->
-                <a href="media/pianist.jpg"><img alt="Piano" class="demoImg" height="42" src="media/pianist.jpg"
-                                                 width="42">
+                <a href="media/music/pianist.jpg"><img alt="Piano" class="demoImg" height="42" src="media/music/pianist.jpg"
+                                                       width="42">
                     <div class="middle">
                         <div class="text">Click to View</div>
                     </div>
                 </a>
             </div>
             <div class="col-md-4 dcontainer">
-                <a href="media/pianist2.jpg"><img alt="Piano" class="demoImg" height="42" src="media/pianist2.jpg"
-                                                  width="42">
+                <a href="media/music/pianist2.jpg"><img alt="Piano" class="demoImg" height="42" src="media/music/pianist2.jpg"
+                                                        width="42">
                     <div class="middle">
                         <div class="text">Click to View</div>
                     </div>
                 </a>
             </div>
             <div class="col-md-4 dcontainer">
-                <a href="media/pianist3.jpg"><img alt="Piano" class="demoImg" height="42" src="media/pianist3.jpg"
-                                                  width="42">
+                <a href="media/music/pianist3.jpg"><img alt="Piano" class="demoImg" height="42" src="media/music/pianist3.jpg"
+                                                        width="42">
                     <div class="middle">
                         <div class="text">Click to View</div>
                     </div>
