--- a/Lab1/SourceCode/MOOC/Engineering.html
+++ b/Lab1/SourceCode/MOOC/Engineering.html
@@ -8,10 +8,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css" rel="stylesheet">
 </head>
-<body background="EngineeringBackground.jpeg">
+<body background="media/altBackground.jpg">
 <div class="topnav2">
     <a class="active" href="index.html">Home</a>
     <a href="">Login</a>
@@ -27,7 +27,7 @@
     <div align="center" class="swiper-wrapper">
         <div align="center" class="swiper-slide">
             <h1 align="center">Computer Science</h1>
-            <img class="center" src="ComputerEngineering.jpg">
+            <img class="center" src="media/engineering/ComputerEngineering.jpg">
             <p data-swiper-parallax="-40%">Computer scientists design and build software, send data over networks, store
                 information in databases, solve cybersecurity problems and address challenges in wireless and handheld
                 devices, robotics and computer vision. Students leave SCE with a foundation in algorithmic thinking and
@@ -36,7 +36,7 @@
         </div>
         <div class="swiper-slide">
             <h1 align="center">Civil Engineering</h1>
-            <img class="center" src="CivilEngineering.png">
+            <img class="center" src="media/engineering/CivilEngineering.png">
             <p data-swiper-parallax="-40%">The American Society of Civil Engineers (ASCE) defines civil engineering as
                 the profession in which a knowledge of the mathematical and physical sciences gained by study,
                 experience, and practice is applied with judgment to develop ways to utilize economically the materials
@@ -50,7 +50,7 @@
         </div>
         <div class="swiper-slide">
             <h1 align="center">Electrical Engineering</h1>
-            <img class="center" src="ElectricalEngineering.jpg">
+            <img class="center" src="media/engineering/ElectricalEngineering.jpg">
             <p data-swiper-parallax="-40%">Electrical and computer engineers design and build electronic circuits used
                 in computers, automated factories, digital recording and entertaining systems. The products they design
                 are found in robots, satellites, mobile phone systems and advanced medical tools. The rapidly changing
@@ -59,7 +59,7 @@
         </div>
         <div class="swiper-slide">
             <h1 align="center">Information Technology</h1>
-            <img class="center" src="InformationTechnology.png">
+            <img class="center" src="media/engineering/InformationTechnology.png">
             <p data-swiper-parallax="-40%">Information technology graduates are on the cutting edge of computer
                 operating systems, mobile applications, browsers, software and networking. They integrate computer
                 technology and tailor it to an organization’s needs and infrastructure. Planning and managing an
@@ -68,7 +68,7 @@
         </div>
         <div class="swiper-slide">
             <h1 align="center">Mechanical Engineering</h1>
-            <img class="center" src="MechanicalEngineering.jpg">
+            <img class="center" src="media/engineering/MechanicalEngineering.jpg">
             <p data-swiper-parallax="-40%">The ME program is one of the broadest of the engineering disciplines, thus,
                 mechanical engineers are the generalists of the engineering profession. Mechanical engineers design,
                 construct, test and operate many types of mechanical, thermal and biological devices. They are involved
