--- a/Lab1/SourceCode/MOOC/index.html
+++ b/Lab1/SourceCode/MOOC/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
     <title>UM Online University</title>
 </head>
@@ -168,9 +168,9 @@
     </li>
 </template>
 
-<script src="dropdownitem.js"></script>
-<script src="menu.js"></script>
-<script src="script.js"></script>
+<script src="js/dropdownitem.js"></script>
+<script src="js/menu.js"></script>
+<script src="js/script.js"></script>
 
 </body>
 </html>
