--- a/Lab2/GoogleKG/SuperSearch/src/index.html
+++ b/Lab2/GoogleKG/SuperSearch/src/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <meta charset="utf-8">
-  <title>MashUp</title>
+  <title>SuperSearch</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
